--- a/src/component/Competences.module.scss
+++ b/src/component/Competences.module.scss
@@ -1,10 +1,11 @@
 .competence {
     background: var(--dark-content);
-    padding: 3rem 1rem;
+    padding: 4rem 6rem;
     color: var(--white);
 
     h1 {
         text-align: center;
+        color: var(--white);
     }
 
 }
