--- a/src/component/Apropos.module.scss
+++ b/src/component/Apropos.module.scss
@@ -14,11 +14,18 @@ h4 {
     max-width: 1170px;
 }
 
-@media screen and (min-width: 992px) {
-    .section {
-        width: 95vw;
+@media screen and (max-width: 1023px) {
+    article .quote {
+        font-size: 1rem;
     }
 }
+
+@media screen and (max-width: 869px) {
+    article .quote {
+        font-size: 0.8rem;
+    }
+}
+
 
 .icon {
     font-size: 3rem;
@@ -54,6 +61,7 @@ article.activeSlide {
     transform: translateX(0);
 }
 
+
 article.lastSlide {
     transform: translateX(-100%);
 }
@@ -62,47 +70,7 @@ article.nextSlide {
     transform: translateX(100%);
 }
 
-.person-img {
-    /*border-radius: 50%;*/
-    margin-bottom: 1rem;
-    width: 350px;
-    height: 350px;
-    object-fit: cover;
-    border: 4px solid hsl(210, 31%, 80%);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-}
 
-article h4 {
-    text-transform: uppercase;
-    color: hsl(21, 62%, 45%);
-    margin-bottom: 0.25rem;
-}
-
-.title {
-    text-transform: capitalize;
-    margin-bottom: 0.75rem;
-    color: hsl(209, 34%, 30%);
-}
-
-.title {
-    text-align: center;
-    margin-bottom: 2rem;
-}
-
-.title h2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: 500;
-}
-
-.text {
-    max-width: 35em;
-    margin: 0 auto;
-    margin-top: 2rem;
-    line-height: 2;
-    color: hsl(210, 22%, 49%);
-}
 
 .prev,
 .next {
@@ -134,45 +102,3 @@ article h4 {
 .next {
     right: 0;
 }
-
-@media (min-width: 800px) {
-    .text {
-        max-width: 45em;
-    }
-
-    .prev,
-    .next {
-        width: 2rem;
-        height: 2rem;
-        font-size: 1.5rem;
-    }
-}
-
-
-
-
-/*.content {
-    padding: 3rem 1rem;
-
-    h1 {
-        text-align: center;
-        padding-top: 0.8rem;
-    }
-
-    div {
-        padding: 6.5rem 3rem;
-
-        p {
-            padding: 0 3rem;
-            text-align: center;
-            font-size: 1.5rem;
-        }
-
-    }
-
-
-
-
-
-
-}*/
