--- a/src/component/Realisation.module.scss
+++ b/src/component/Realisation.module.scss
@@ -13,15 +13,22 @@
 .card {
     padding: 1rem;
     width: 250px;
+    overflow: hidden;
+    cursor: pointer;
 
     img {
         height: 200px;
-        width: 200px;
-        object-fit: cover;
+        width: 100%;
+        object-fit: contain;
+        transform: scale(1);
+        transition: transform 0.3s ease-out;
+        display: block;
+        margin: left auto right auto;
+
     }
 
     img:hover {
-        transform: scale(1.5);
+        transform: scale(1.2);
     }
 
     background: var(--white);
