--- a/src/component/Realisation.module.scss
+++ b/src/component/Realisation.module.scss
@@ -2,7 +2,7 @@
     background: var(--dark-content);
     padding: 1rem 6rem;
     color: var(--white);
-    height: 80vh;
+    height: 50vh;
 
     h1 {
         text-align: center;
@@ -10,30 +10,16 @@
 
 }
 
+
 .card {
     padding: 1rem;
     width: 250px;
     overflow: hidden;
     cursor: pointer;
-
-    img {
-        height: 200px;
-        width: 100%;
-        object-fit: contain;
-        transform: scale(1);
-        transition: transform 0.3s ease-out;
-        display: block;
-        margin: left auto right auto;
-
-    }
-
-    img:hover {
-        transform: scale(1.2);
-    }
-
     background: var(--white);
     color: var(--dark-text);
     border-radius: 15px;
+    //margin-top: 2.5rem;
 
     h3 {
         padding: 0.5rem;
@@ -49,5 +35,30 @@
         }
     }
 
+}
+
+@media screen and (max-width:960px) {
+    .card:nth-child(2) {
+        h3 {
+            font-size: 0.6rem;
+        }
+    }
+
+    .realisation {
+        height: 80vh;
+    }
+
+    .realisation .serviceContent {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+    }
+
+    /*h3 {
+
+        font-size: 0.5rem;
+
+    }*/
 
 }
