--- a/src/component/slide.css
+++ b/src/component/slide.css
@@ -1,23 +1,16 @@
 .content {
-    padding: 4rem 1rem 7rem 1rem;
+    padding: 6rem;
 }
 
-@media screen and (min-width: 992px) {
-    .section {
-        width: 95vw;
-    }
-}
+
 
 
 .section-center {
     margin: auto;
-    width: 80vw;
     height: 100px;
-    max-width: 800px;
     text-align: center;
     position: relative;
     display: flex;
-    z-index: 1;
 }
 
 article {
@@ -26,7 +19,7 @@ article {
     height: 100%;
     opacity: 0;
     transition: all 0.3s linear;
-    padding: 0 5rem;
+    padding: 0 4rem;
 }
 
 article.activeSlide {
@@ -92,9 +85,6 @@ article h4 {
 }
 
 @media (min-width: 800px) {
-    .text {
-        max-width: 45em;
-    }
 
     .prev,
     .next {
@@ -104,24 +94,18 @@ article h4 {
     }
 }
 
-.person-img {
-
-    width: 700px;
-    height: 350px;
-    object-fit: cover;
-
-    border-radius: 35px;
-    border: 1px solid var(--white);
+@media (max-width: 858px) {
+    article {
+        overflow: scroll;
+    }
 }
 
-.galerie {
-    background: var(--dark-content);
-    padding: 3rem 1rem;
-    color: var(--white);
-    height: 500px;
-}
+@media (max-width: 600px) {
+    .quote {
+        font-size: 1rem;
+    }
 
-.galerie h1 {
-    text-align: center;
-    margin-bottom: 5px;
+    article {
+        overflow: scroll;
+    }
 }
