--- a/src/component/Footer.module.scss
+++ b/src/component/Footer.module.scss
@@ -31,7 +31,8 @@
         }
 
         p {
-            font-size: 0.6rem;
+            font-size: 0.5rem;
+            text-align: center;
         }
     }
 }
