--- a/src/component/slide.css
+++ b/src/component/slide.css
@@ -97,6 +97,7 @@ article h4 {
 @media (max-width: 858px) {
     article {
         overflow: scroll;
+        overflow-x: hidden;
     }
 }
 
@@ -107,5 +108,6 @@ article h4 {
 
     article {
         overflow: scroll;
+        overflow-x: hidden;
     }
 }
